--- a/index.html
+++ b/index.html
@@ -8,8 +8,29 @@
     <title>Document</title>
 </head>
 <body>
+<canvas id="canvas" width="800"></canvas>
 <script>
-    
+    function start(){
+        console.log('Start')
+    }
+    function move(){
+        console.log('Move')
+
+    }
+    function end(){
+        console.log('End')
+
+    }
+   function init() {
+       var canvas = this.getElementsById('canvas');
+
+       canvas.addEventListener('touchstart', start(), false);
+       canvas.addEventListener('touchstart', end(), false);
+       canvas.addEventListener('touchstart', move(), false);
+
+   }
+
+   init();
 </script>
 </body>
 </html>
