--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     }
    function init() {
-       var canvas = this.getElementsById('canvas');
+       var canvas = document.getElementsById('canvas');
 
        canvas.addEventListener('touchstart', start(), false);
        canvas.addEventListener('touchstart', end(), false);
